# android-html-iterator

./: LICENSE  README.md  gradlew.bat  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: test.html
app/src/main/java/com/htmliterator/example/: MainActivity.kt
app/src/main/java/com/htmliterator/example/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
iterator/: build.gradle.kts
iterator/src/androidTest/assets/: elements-iteration-test.html  full-doc-test1.html  full-doc-test2.html  full-doc-test3.html  kotlin-integration-test.html  tag-info-test.html
iterator/src/androidTest/kotlin/com/htmliterator/: BaseAndroidTest.kt  FullDocumentFlagTest.kt  KotlinIntegrationTest.kt  TagInfoTest.kt
iterator/src/main/cpp/: CMakeLists.txt  DebugLogCallback.h  HtmlIterator.h  HtmlIteratorCallback.h  HtmlUtils.h  ITERATOR_JNI.cpp  JniHtmlIteratorCallback.h  PlatformUtils.h  StringUtils.h  TagInfo.h
iterator/src/main/kotlin/com/htmliterator/: HtmlIterator.kt  TagInfo.kt
